--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,7 +4,7 @@
 
 * {
     /* border: 1px solid #000; */
-    font-family: "DM Sans", sans-serif;
+    font-family: "Plus Jakarta Sans", sans-serif;
 }
 .option-svg-post {
     transform: rotate(90deg);
@@ -37,3 +37,68 @@
     display: flex;
 }
 
+.swiper-container {
+    width: 100%;
+    height: 400px;
+}
+
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+}
+
+.swiper-slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+@media screen and (min-width: 1366px){
+     :root {
+        font-size: 1.1vw;
+     }
+}
+
+@media screen and (min-width: 850px) and (max-width: 1120px){
+     :root {
+        font-size: 1.5vw;
+     }
+}
+
+@media screen and (min-width: 767px) and (max-width: 850px){
+     :root {
+        font-size: 1.5vw;
+     }
+}
+
+@media screen and (min-width: 600px) and (max-width: 767px){
+     :root {
+        font-size: 1.8vw;
+     }
+}
+
+@media screen and (min-width: 450px) and (max-width: 600px){
+     :root {
+        font-size: 2.2vw;
+     }
+}
+
+@media screen and (max-width: 450px){
+     :root {
+        font-size: 2.6vw;
+     }
+}
