--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -37,34 +37,9 @@
     display: flex;
 }
 
-.swiper-container {
-    width: 100%;
-    height: 400px;
-}
-
-.swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
-    /* Center slide text vertically */
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
+.user_preferences.active {
     display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
-}
-
-.swiper-slide img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    flex-direction: column;
 }
 
 @media screen and (min-width: 1366px){
@@ -75,7 +50,7 @@
 
 @media screen and (min-width: 850px) and (max-width: 1120px){
      :root {
-        font-size: 1.5vw;
+        font-size: 1.3vw;
      }
 }
 
