style: update page update and add ui of option mute and report post

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -37,6 +37,10 @@
     display: flex;
 }
 
+.options_blog_container.active {
+    display: block;
+} 
+
 .user_preferences.active {
     display: flex;
     flex-direction: column;
