--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -50,6 +50,10 @@
     display: block;
 }
 
+.modal_preview_container.active {
+    display: block;
+}
+
 @media screen and (min-width: 1366px){
      :root {
         font-size: 1.1vw;
@@ -83,5 +87,8 @@
 @media screen and (max-width: 450px){
      :root {
         font-size: 2.6vw;
+     }
+     .description_input {
+        height: 32rem;
      }
 }
